--- a/organizing.html
+++ b/organizing.html
@@ -29,11 +29,12 @@
       </div>
     </header>
 
-    <div class="label-container">
-      <img class="label-img" src="img/label.jpg" alt=" To notes. One is light pink with a note about use bye food. The other one is light green with a note about best fore food">
-      <div class="label-text">
-        <h2>Food labeling</h2>
-        <p>It's important to understand the difference between “use by” and “best before” dates. The “use by” date tells you when the food is no longer safe to eat. The “best before” dates are about quality, the food is still safe to eat after.</p>
+    <div class="organizing-container">
+      <img class="organizing-img" src="img/organizing.jpg" alt="Different kind of foods in a food storage container and footbag with date labels">
+      <div class="organizing-text">
+        <h2>System in your refrigerator</h2>
+        <p>It may be easier to keep a track of all your items if you have a system. Put the older items that expire soon in the front and the ones that expire in a while at the back. This will help you see the items you should use first when you eiter open your refrigerator, freezer or pantry.</p>
+
 
       </div>
 
