--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>NOwaste</title>
   </head>
 
   <body>
@@ -28,6 +28,7 @@
         </div>
       </div>
     </header>
+    <source scr="nav.js"></source> 
 
   </body>
 </html>
