--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <h1 class="logo">N<i class="fa fa-ban"></i><span>waste</span></h1>
       </div>
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Tips</a></li>
-        <li><a href="#">App</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class="nav-link-element nav-link__mobile-only"><a href="#">Home</a></li>
+        <li class="nav-link-element"><a href="#">About</a></li>
+        <li class="nav-link-element"><a href="#">Tips</a></li>
+        <li class="nav-link-element"><a href="#">App</a></li>
+        <li class="nav-link-element"><a href="#">Contact</a></li>
       </ul>
 
 
