--- a/dried.html
+++ b/dried.html
@@ -2,32 +2,38 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>NOwaste</title>
   </head>
 
   <body>
-    <header>
 
-      <div class="container">
-        <h1 class="logo">N<span>Ø</span>waste</h1>
-
-        <nav class="web-nav">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Tips</a></li>
-            <li><a href="#">App</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-
-        <div class="menu-toggle">
-          <div class="burger"></div>
-        </div>
+    <nav>
+      <div class="logo">
+        <h1 class="logo">N<i class="fa fa-ban"></i><span>waste</span></h1>
       </div>
-    </header>
+      <ul class="nav-links">
+        <li class="nav-link-element nav-link__mobile-only"><a href="#">Home</a></li>
+        <li class="nav-link-element"><a href="#">About</a></li>
+        <li class="nav-link-element"><a href="#">Tips</a></li>
+        <li class="nav-link-element"><a href="#">App</a></li>
+        <li class="nav-link-element"><a href="#">Contact</a></li>
+      </ul>
+
+
+      <div class="hamburger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+
+    </nav>
+
+    <script src="app.js"></script>
 
     <div class="drying-container">
       <img class="drying-img" src="img/dried.jpg" alt="dried strawberries, beans, corn">
