--- a/index.html
+++ b/index.html
@@ -17,13 +17,101 @@
       <input type="checkbox" class="menu-btn" id="menu-btn">
       <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
       <ul class="menu">
-        <li class="nav-link__mobile-only"><a href="#home">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Tips</a></li>
         <li><a href="#">App</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </header>
+
+    <div class="homepage-container">
+      <div class="msg-container">
+        <div id="slider">
+          <div class="msg-col">
+            <h1>about</h1>
+            <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
+              <a href="#">Learn More</a>
+          </div>
+          <div class="msg-col">
+            <h1>tips</h1>
+            <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
+              <a href="#">Learn More</a>
+          </div>
+          <div class="msg-col">
+            <h1>app</h1>
+            <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
+              <a href="#">Learn More</a>
+          </div>
+          <div class="msg-col">
+            <h1>contact</h1>
+            <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
+              <a href="#">Learn More</a>
+          </div>
+          </div>
+        </div>
+        <a class="scroll" href="#content"></a>
+      </div>
+
+      <div class="controller">
+        <div id="line1"></div>
+        <div id="line2"></div>
+        <div id="line3"></div>
+        <div id="line4"></div>
+        <div id="active"></div>
+      </div>
+
+      <script type="text/javascript">
+
+        var slider = document.getElementById('slider');
+        var active = document.getElementById('active');
+        var line1 = document.getElementById('line1');
+        var line2 = document.getElementById('line2');
+        var line3 = document.getElementById('line3');
+        var line4 = document.getElementById('line4');
+
+        line1.onclick = function(){
+          slider.style.transform = 'translateX(0)';
+          active.style.top = '0px';
+        }
+        line2.onclick = function(){
+          slider.style.transform = 'translateX(-25%)';
+          active.style.top = '80px';
+        }
+        line3.onclick = function(){
+          slider.style.transform = 'translateX(-50%)';
+          active.style.top = '160px';
+        }
+        line4.onclick = function(){
+          slider.style.transform = 'translateX(-75%)';
+          active.style.top = '240px';
+        }
+
+      </script>
+
+      <noscript class="noscript-main">
+        javascript not supported
+      </noscript>
+
+    </div>
+
+    <section class="content-main" id="content">
+      <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+      Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+      Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+      Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+      Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+      Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
+      Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.</p>
+    </section>
 
   </body>
 </html>
