--- a/smoothie.html
+++ b/smoothie.html
@@ -12,28 +12,18 @@
 
   <body>
 
-    <nav>
-      <div class="logo">
-        <h1 class="logo">N<i class="fa fa-ban"></i><span>waste</span></h1>
-      </div>
-      <ul class="nav-links">
-        <li class="nav-link-element nav-link__mobile-only"><a href="#">Home</a></li>
-        <li class="nav-link-element"><a href="#">About</a></li>
-        <li class="nav-link-element"><a href="#">Tips</a></li>
-        <li class="nav-link-element"><a href="#">App</a></li>
-        <li class="nav-link-element"><a href="#">Contact</a></li>
+    <header class="header">
+      <a href="#home" class="logo">n<i class="fa fa-ban"></i>waste</a>
+      <input type="checkbox" class="menu-btn" id="menu-btn">
+      <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
+      <ul class="menu">
+        <li class="nav-link__mobile-only"><a href="#home">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Tips</a></li>
+        <li><a href="#">App</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
-
-
-      <div class="hamburger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-      </div>
-
-    </nav>
-
-    <script src="app.js"></script>
+    </header>
 
 
     <div class="smoothie-container">
