Tips page completed

--- a/label.html
+++ b/label.html
@@ -11,13 +11,13 @@
   </head>
 
   <body>
-
+    
     <header class="header">
       <a href="#home" class="logo">n<i class="fa fa-ban"></i>waste</a>
       <input type="checkbox" class="menu-btn" id="menu-btn">
       <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
       <ul class="menu">
-        <li class="nav-link__mobile-only"><a href="#home">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Tips</a></li>
         <li><a href="#">App</a></li>
