--- a/organizing.html
+++ b/organizing.html
@@ -17,14 +17,14 @@
       <input type="checkbox" class="menu-btn" id="menu-btn">
       <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
       <ul class="menu">
-        <li class="nav-link__mobile-only"><a href="#home">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Tips</a></li>
         <li><a href="#">App</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </header>
-    
+
     <div class="organizing-container">
       <img class="organizing-img" src="img/organizing.jpg" alt="Different kind of foods in a food storage container and footbag with date labels">
       <div class="organizing-text">
