--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Tips</a></li>
+        <li><a href="tips.html">Tips</a></li>
         <li><a href="#">App</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
