--- a/tips.html
+++ b/tips.html
@@ -34,7 +34,7 @@
         <a href="#">Sources</a>
       </div>
 
-      <a class="scroll" id="scroll" href="#scroll"></a>
+      <a class="scroll-b" href="#scroll" id="scroll"></a>
 
       <script type="text/javascript" src="scroll.js"></script>
 
