--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div id="slider">
           <div class="msg-col">
             <h1>about</h1>
-            <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
+            <p>We are 7 student who believe in NOT wasting food. We want to make booklets/ an app where the user can learn and get the full benefit of their food.
+              Some of the information we cover is: what foods last longer than others, what parts of a plant you can or can’t eat, easy recipes on how to make food of what you already have at home and a lot of other tips and solutions.
+              This way we reduce the food waste and make the world a better and less hungry place!</p>
               <a href="#">Learn More</a>
           </div>
           <div class="msg-col">
