--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="tips.html">Tips</a></li>
+        <li><a href="tips.html">Solutions</a></li>
         <li><a href="#">App</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -30,16 +30,21 @@
         <div id="slider">
           <div class="msg-col">
             <h1>about</h1>
-            <p>We are 7 student who believe in NOT wasting food. We want to make booklets/ an app where the user can learn and get the full benefit of their food.
-              Some of the information we cover is: what foods last longer than others, what parts of a plant you can or can’t eat, easy recipes on how to make food of what you already have at home and a lot of other tips and solutions.
+            <p>We are 7 student who believe in NOT wasting food.
+              We want to make booklets/ an app where the user can learn and get the full benefit of their food.
+              Some of the information we cover is: what foods last longer than others,
+              what parts of a plant you can or can’t eat,
+              easy recipes on how to make food of what you already have at home and a
+              lot of other tips and solutions.
               This way we reduce the food waste and make the world a better and less hungry place!</p>
               <a href="#">Learn More</a>
           </div>
           <div class="msg-col">
-            <h1>tips</h1>
-            <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
+            <h1>solutions</h1>
+            <p>Here you can find some of our solutions on how you can reduce food waste.
+            Some of the information we cover here is how to make food last longer, what you can do to purchase
+            less food, and recipes that uses most parts of the produce,  
+            all while maintaining the same taste and quality.</p>
               <a href="#">Learn More</a>
           </div>
           <div class="msg-col">
