--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
           <div class="msg-col">
             <h1>solutions</h1>
             <p>Here you can find some of our solutions on how you can reduce wasting food.
-            Some of the information we cover here is how to make food last longer, what you can do to purchase
-            less food, and recipes that uses most parts of the produce,
+            Some of the information we cover here is how to make food last longer,
+            what you can do to avoid over purchasing food,
+            and recipes that uses most parts of the produce,
             all while maintaining the same taste and quality.</p>
-              <a href="#">Learn More</a>
+              <a href="tips.html">Learn More</a>
           </div>
           <div class="msg-col">
             <h1>app</h1>
