--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
           <div class="msg-col">
             <h1>solutions</h1>
-            <p>Here you can find some of our solutions on how you can reduce wasting food.
+            <p>Here you can find some of our solutions on how you can avoid wasting food.
             Some of the information we cover here is how to make food last longer,
             what you can do to avoid over purchasing food,
             and recipes that uses most parts of the produce,
