--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#">About</a></li>
         <li><a href="tips.html">Solutions</a></li>
         <li><a href="#">App</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </header>
 
