--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
               Some of the information we cover is: what foods last longer than others,
               what parts of a plant you can or can’t eat,
               easy recipes on how to make food of what you already have at home and a
-              lot of other tips and solutions.
-              This way we reduce the food waste and make the world a better and less hungry place!</p>
+              lot of other tips and solutions!</p>
               <a href="#">Learn More</a>
           </div>
           <div class="msg-col">
