--- a/tips.html
+++ b/tips.html
@@ -34,7 +34,11 @@
         <a href="#">Sources</a>
       </div>
 
-      <div class="scroll-b" id="scroll"></div>
+      <!--<div class="scroll-b" id="scroll"></div>-->
+
+      <div class="scroll-b" id="scroll">
+        <a onclick="scrollDown('smoothie'); return false;" href="#" class="section11">Scroll down</a>
+      </div>
 
       <script type="text/javascript" src="scroll.js"></script>
 
