--- a/label.html
+++ b/label.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    
+
     <header class="header">
       <a href="#home" class="logo">n<i class="fa fa-ban"></i>waste</a>
       <input type="checkbox" class="menu-btn" id="menu-btn">
@@ -19,9 +19,9 @@
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Tips</a></li>
+        <li><a href="tips.html">Solutions</a></li>
         <li><a href="#">App</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </header>
 
