--- a/shoppinglist.html
+++ b/shoppinglist.html
@@ -19,9 +19,9 @@
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Tips</a></li>
+        <li><a href="tips.html">Solutions</a></li>
         <li><a href="#">App</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </header>
 
