--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,7 @@
 
     <div class="contact-container">
       <h2>We are an information site that works for a more sustainable future.
-        We are mainly run by ads from environmentally conscious and sustainable
-        companies. Do you want to support us and have your ads on our websites
+        Do you want to support us and have your ads on our websites
         and in our app? Send us an email!</h2>
       <form action="/action_page.php">
         <h3>Contact us here:</h3>
