--- a/tips.html
+++ b/tips.html
@@ -21,7 +21,7 @@
         <li><a href="#">About</a></li>
         <li><a href="tips.html">Tips</a></li>
         <li><a href="#">App</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </header>
 
@@ -37,15 +37,17 @@
       <!--<div class="scroll-b" id="scroll"></div>-->
 
       <div class="scroll-b" id="scroll">
-        <a onclick="scrollDown('smoothie'); return false;" href="#" class="section11">Scroll down</a>
+        <a onclick="scrollDown('smoothie'); return false;" href="#" class="section-scroll">!!!!<br>!!!!<br>!!!!</a>
       </div>
+
+      <button onclick="backTopFunc()" id="buttonTop" title="Back to top"><i class="fa fa-angle-double-up"></i></button>
 
       <script type="text/javascript" src="scroll.js"></script>
 
     </div>
 
 
-    <div class="wrapper-s" id="smoothie">
+    <section class="wrapper-s" id="smoothie">
       <div class="smoothie-text">
         <h1>Make a Smoothie</h1><br><br>
         <p>Fruit, vegetables, and herbs that you might think of discarding,
@@ -53,7 +55,7 @@
           wilted herbs, broccoli or kale stems.</p>
       </div>
       <img class="smoothie-img" src="img/smoothie.png" alt="Pink smoothie with berries, with blue background">
-    </div>
+    </section>
 
     <section class="wrapper-v">
 
