--- a/about.html
+++ b/about.html
@@ -25,53 +25,47 @@
       </ul>
     </header>
 
-    <div class="homepage-container">
-      <div class="msg-container">
-        <div id="slider">
-          <div class="msg-col">
-            <h1>about</h1>
-            <p>We are 7 student who believe in NOT wasting food.
-              We want to make booklets/ an app where the user can learn and get the full benefit of their food.
-              Some of the information we cover is: what foods last longer than others,
-              what parts of a plant you can or can’t eat,
-              easy recipes on how to make food of what you already have at home and a
-              lot of other tips and solutions!</p>
-              <a href="#">Learn More</a>
-          </div>
-          <div class="msg-col">
-            <h1>solutions</h1>
-            <p>Here you can find some of our solutions on how you can avoid wasting food.
-            Some of the information we cover here is how to make food last longer,
-            what you can do to avoid over purchasing food,
-            and recipes that uses most parts of the produce,
-            all while maintaining the same taste and quality.</p>
-              <a href="tips.html">Learn More</a>
-          </div>
-          <div class="msg-col">
-            <h1>app</h1>
-            <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
-              <a href="#">Learn More</a>
-          </div>
-          <div class="msg-col">
-            <h1>contact</h1>
-            <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
-              <a href="#">Learn More</a>
-          </div>
-          </div>
-        </div>
-        <a class="scroll" href="#content"></a>
-      </div>
-
-      <div class="controller">
-        <div id="line1"></div>
-        <div id="line2"></div>
-        <div id="line3"></div>
-        <div id="line4"></div>
-        <div id="active"></div>
+    <div class="about-container">
+      <h1>about</h1>
+      <h3>We are 7 student who believe in NOT wasting food. We want to make
+        booklets/ an app where the user can learn and get the full benefit of
+        their food. Some of the information we cover is: what foods last longer
+        than others, what parts of a plant you can or can’t eat, easy recipes on
+         how to make food of what you already have at home and a lot of other
+         tips and solutions!</h3>
+      <h2>We can do it!</h2>
+      <p>Do you ever have food in the fridge that gets bad before you have time
+        to eat it? You're not alone! A study from 2018 shows that the household
+        sector accounts for more than half of all food waste in Norway and in
+        total 1/3 of all food goes straight into the bin (matvett, 2019). That's
+         a sad thought. It is not good for the environment nor is it
+         economically appropriate. But do not be discouraged, because the same
+         study showed that from 2015 - 2018 we had a decrease of 16,000 tons of
+         food waste. This corresponds to a 12% decrease per capita. The food
+         industry does its job and we want to help the population contribute
+         their share. Therefore, we want to spread knowledge and information
+         about how you as individuals can become better at using up the food we
+         already have instead of just throwing it away. Because it is possible!</p>
+         <h2>The UN's number 2</h2>
+         <p>The UN's number 2 sustainability goal is to eradicate hunger,
+           achieve food security and better nutrition, and promote sustainable
+           agriculture (UN Sustainability Goal, 2020).<br>
+           The UN says that there is enough food for everyone in the world
+           today, but due to the skewed distribution we have today, some in the
+           world are starving, while others throw away food because they have
+           too much. The goal is to be able to distribute the resources more
+           fairly and take care of the food in a better way than we do today.<br>
+           Sub-goal 2.4 states: "By 2030, ensure that there are sustainable food
+            production systems, and introduce robust methods that increase
+            productivity and production, that help maintain ecosystems, that
+            strengthen the capacity to adapt to climate change, extreme weather,
+             droughts, floods and other disasters, and that gradually improves
+             the quality of land and soil. "<br><br>
+             In Norway, we get more than enough food, and the problem is rather
+             unhealthy diet and malnutrition. Luckily, there are plenty of
+             healthy, tasty and simple tricks and tips for making both simple
+             and advanced meals in a sustainable way. Read our tips on our
+             solution page and get inspired.</p>
       </div>
 
       <script type="text/javascript">
