--- a/organizing.html
+++ b/organizing.html
@@ -18,7 +18,7 @@
       <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
       <ul class="menu">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="tips.html">Solutions</a></li>
         <li><a href="#">App</a></li>
         <li><a href="contact.html">Contact</a></li>
