--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               what parts of a plant you can or can’t eat,
               easy recipes on how to make food of what you already have at home and a
               lot of other tips and solutions!</p>
-              <a href="#">Learn More</a>
+              <a href="about.html">Learn More</a>
           </div>
           <div class="msg-col">
             <h1>solutions</h1>
@@ -59,7 +59,7 @@
             <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
             Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
             Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
-              <a href="#">Learn More</a>
+              <a href="contact.html">Learn More</a>
           </div>
           </div>
         </div>
