--- a/tips.html
+++ b/tips.html
@@ -35,12 +35,10 @@
       </div>
 
       <div class="scroll-b" id="scroll">
-<<<<<<< Updated upstream
-        <a onclick="scrollDown('smoothie'); return false;" href="#" class="section11">Scroll down</a>
-=======
         <a onclick="scrollDown('smoothie'); return false;" title="Scroll Down" href="#" class="section-scroll">!!!!<br>!!!!<br>!!!!</a>
->>>>>>> Stashed changes
       </div>
+
+      <button onclick="backTopFunc()" id="buttonTop" title="Back to top"><i class="fa fa-angle-double-up"></i></button>
 
       <script type="text/javascript" src="scroll.js"></script>
 
