--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
             Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
             Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
-              <a href="#">Learn More</a>
+              <a href="app.html">Learn More</a>
           </div>
           <div class="msg-col">
             <h1>contact</h1>
