--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="tips.html">Solutions</a></li>
-        <li><a href="#">App</a></li>
+        <li><a href="app.html">App</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </header>
