--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
 
     </div>
 
-    <section class="content-main" id="content">
+    <section class="content-footer" id="content">
       <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
       Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
       Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
