--- a/tips.html
+++ b/tips.html
@@ -27,10 +27,17 @@
 
     <div class="tips-container">
       <div class="tips-col">
-        <h1>today's tips</h1>
-        <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-        Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-        Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.</p>
+        <h1>Why is food preservation important?</h1>
+        <p>Preservation methods help inhibit bacterial growth meaning the food will be safe
+        and satisfying in the future.
+        Food preservation help minimise pathogenic bacteria and will stop its growth.
+        Bacteria only needs warmth and moisture, so knowing how to prevent the minimization of
+        bacteria will help to keep food at its best quality.
+        Your food will last longer which will also help you to save money.
+        <br>
+        <br>
+        Here are our solutions to help you start saving your food:
+        </p>
         <a href="#">Sources</a>
       </div>
 
