--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     </header>
 
     <div class="about-container">
-      <h1>about</h1>
+      <h1>About</h1>
       <h3>We are 7 student who believe in NOT wasting food. We want to make
         booklets/ an app where the user can learn and get the full benefit of
         their food. Some of the information we cover is: what foods last longer
@@ -103,13 +103,7 @@
     </div>
 
     <section class="content-footer" id="content">
-      <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-      Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-      Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-      Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-      Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-      Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-      Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.</p>
+
     </section>
 
   </body>
