--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="msg-container">
         <div id="slider">
           <div class="msg-col">
-            <h1>about</h1>
+            <h1>About</h1>
             <p>We are 7 student who believe in NOT wasting food.
               We want to make booklets/ an app where the user can learn and get the full benefit of their food.
               Some of the information we cover is: what foods last longer than others,
@@ -39,7 +39,7 @@
               <a href="about.html">Learn More</a>
           </div>
           <div class="msg-col">
-            <h1>solutions</h1>
+            <h1>Solutions</h1>
             <p>Here you can find some of our solutions on how you can avoid wasting food.
             Some of the information we cover here is how to make food last longer,
             what you can do to avoid over purchasing food,
@@ -48,17 +48,17 @@
               <a href="tips.html">Learn More</a>
           </div>
           <div class="msg-col">
-            <h1>app</h1>
+            <h1>App</h1>
             <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
             Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
             Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
               <a href="app.html">Learn More</a>
           </div>
           <div class="msg-col">
-            <h1>contact</h1>
-            <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
+            <h1>Contact</h1>
+            <p>We are an information site that works for a more sustainable future.
+              Do you want to support us and have your ads on our websites
+              and in our app? Send us an email! </p>
               <a href="contact.html">Learn More</a>
           </div>
           </div>
@@ -116,7 +116,7 @@
 
     <section class="content-main" id="contentMain">
       <div class="picture-wrapper">
-        <img src="img/extra1.jpg" alt="">
+        <img src="img/app1.png" alt="App">
       </div>
       <div class="h-wrapper">
         <a href="app.html" title="Learn more about our app">the n<span><i class="fa fa-ban" aria-hidden="true"></span></i>waste app</a>
