--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,15 @@
           <option value="USA">USA</option>
           <option value="Other">Other...</option>
         </select>
+        <select id="theme" name="theme">
+          <option value="Solutions">Solutions</option>
+          <option value="Website">Website</option>
+          <option value="Economic">Economic</option>
+          <option value="App">App</option>
+          <option value="Donation">Donation</option>
+          <option value="jobApplication">Job application</option>
+          <option value="Other">Other...</option>
+        </select>
 
         <label for="subject"><b>Subject</b></label>
         <textarea id="subject" name="subject" placeholder="Write to us here..." style="height:200px"></textarea>
