--- a/tips.html
+++ b/tips.html
@@ -36,7 +36,7 @@
         Your food will last longer which will also help you to save money.
         <br>
         <br>
-        Here are a few solutions to start help you saving your food:
+        Here are some solutions to start your new journey:
         </p>
         <a href="#">Sources</a>
       </div>
