tekst i app delen

--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
           </div>
           <div class="msg-col">
             <h1>App</h1>
-            <p>Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here.
-            Add text here. Add text here. Add text here. Add text here. Add text here. Add text here. </p>
+            <p>Our app is meant as a utility in your healthy and optamized day-to-day life.
+            Whether you're in the kitchen, prepping a meal, or you're out grocery shopping,
+            our app is there to assist you. We provide information that will help take the small steps
+            needed to achieve personalized goals. </p>
               <a href="app.html">Learn More</a>
           </div>
           <div class="msg-col">
