About page - Resources

--- a/about.html
+++ b/about.html
@@ -65,7 +65,16 @@
              unhealthy diet and malnutrition. Luckily, there are plenty of
              healthy, tasty and simple tricks and tips for making both simple
              and advanced meals in a sustainable way. Read our tips on our
-             solution page and get inspired.</p>
+             solution page and get inspired.</p><br><br><br>
+            <h2>Our resources:</h2>
+            <ul class="kilder">
+              <li><a href="https://www.fn.no/om-fn/fns-baerekraftsmaal/utrydde-sult"> <b>\\</b> fn.no (25.11.2020). Utrydde sult. <em>FNs bærekraftsmål</em></a></li><br>
+              <li><a href="https://readlabel.com.au/blog/food-packaging-date-marks-the-things-to-note"> <b>\\</b> Lawson, R. (2020). Food Packaging Date Marks: The Things to Note. <em>readlabel.com.au</em> (date retrieved 23.11.2020)</a></li><br>
+              <li><a href="https://www.highspeedtraining.co.uk/hub/food-preservation-methods/?fbclid=IwAR1UHCRKOdw42VaHYTG7-BkTgbxkF77mUOWXV_5KH8YyYh7eWmk2nZ6Yres"> <b>\\</b> Burton, L. (2018). Food Preservation Methods and Guidance. <em>HUB High Speed Training</em> (date feteched: 23.11.2020)</a></li><br>
+              <li><a href="https://kildekompasset.no/referansestiler/apa-7th/"> <b>\\</b> kildekompasset.no. APA 7th. <em>University of Stavanger</em></a></li><br>
+              <li><a href="https://www.matvett.no/bransje/tall-og-fakta"> <b>\\</b> Callewaert, P., Hanssen, O. J., Prestrud, K., Stesgård, A. E.(2019). Matsvinn i Norge: Rapportering av nøkkeltall 2018.<em>Østfoldforskning AS</em>, s. 4 og s. 7.</a></li><br>
+              <li><a href="https://www.foodandwine.com/news/11-ways-stop-wasting-food?fbclid=IwAR1miRXNDcwJbABdUWBcNF7eegJP3mH3DXiNN6l4i6xCw9SBR2cv_76lSNA"> <b>\\</b> Walsh, J. M. (2015). 11 Ways to Stop Wasting Food, foodandwine.com. <em>Meredith Corporation</em> (date fetched: 23.11.2020)</a></li><br>
+            </ul>
       </div>
 
       <script type="text/javascript">
