--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <body>
 
     <header class="header">
-      <a href="#home" class="logo">n<i class="fa fa-ban"></i>waste</a>
+      <a href="index.html" class="logo">n<i class="fa fa-ban"></i>waste</a>
       <input type="checkbox" class="menu-btn" id="menu-btn">
       <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
       <ul class="menu">
