--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <body>
 
     <header class="header">
-      <a href="#home" class="logo">n<i class="fa fa-ban"></i>waste</a>
+      <a href="index.html" class="logo">n<i class="fa fa-ban"></i>waste</a>
       <input type="checkbox" class="menu-btn" id="menu-btn">
       <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
       <ul class="menu">
@@ -50,6 +50,7 @@
           <option value="USA">USA</option>
           <option value="Other">Other...</option>
         </select>
+        <label for="country"><b>Subject</b></label>
         <select id="theme" name="theme">
           <option value="Solutions">Solutions</option>
           <option value="Website">Website</option>
@@ -60,7 +61,7 @@
           <option value="Other">Other...</option>
         </select>
 
-        <label for="subject"><b>Subject</b></label>
+        <label for="subject"><b>Write here:</b></label>
         <textarea id="subject" name="subject" placeholder="Write to us here..." style="height:200px"></textarea>
 
         <input type="submit" value="Submit">
