--- a/app.html
+++ b/app.html
@@ -27,22 +27,23 @@
 
 
     <div class="app-container">
+      <h1>The application</h1>
       <img class="app-img" src="img/App5.png" alt="Five pictures of a layout of an app.">
       <div class="app-text">
-        <h3>Startpage</h3>
+        <h2>Startpage</h2>
         <p>You will get a little information about nowaste. To get to the next step you have to click on the “GET STARTED” button.</p>
 
-        <h3>Categories</h3>
+        <h2>Categories</h2>
         <p>Here you have the opportunity to select the food item you want to get more information about and recipes that include the food.</p>
 
-        <h3>Select item</h3>
+        <h2>Select item</h2>
         <p>If you click on the fruit category, it will bring you to this page where it will display all different fruits alphabetically. You can also search for the fruit you are looking for in the search bar.</p>
 
-        <h3>Information</h3>
+        <h2>Information</h2>
         <p>On this page you get valuable details about the fruit. How they are best stored, preserved, their durability, etc..
           On the bottom of the page, there is a large button that says: “Recipes”.</p>
 
-        <h3>Recipes</h3>
+        <h2>Recipes</h2>
         <p>Here you can select and search for the recipe that includes the food item.</p>
 
       </div>
