--- a/tips.html
+++ b/tips.html
@@ -27,21 +27,24 @@
 
     <div class="tips-container">
       <div class="tips-col">
-        <h1>Why is food preservation important?</h1>
-        <p>Preservation methods help inhibit bacterial growth meaning the food will be safe
-        and satisfying in the future.
-        Food preservation help minimise pathogenic bacteria and will stop its growth.
-        Bacteria only needs warmth and moisture, so knowing how to prevent the minimization of
-        bacteria will help to keep food at its best quality.
-        Your food will last longer which will also help you to save money.
-        <br>
-        <br>
-        Here are some solutions to start your new journey:
-        </p>
-        <a href="tips.html">Solutions</a>
+        <div class="tips-col-h">
+          <h1>why food preservation is important</h1>
+        </div>
+        <div class="tips-col-p">
+          <p>Preservation methods help inhibit bacterial growth meaning the food will be safe
+          and satisfying in the future.
+          Food preservation help minimise pathogenic bacteria and will stop its growth.
+          Bacteria only needs warmth and moisture, so knowing how to prevent the minimization of
+          bacteria will help to keep food at its best quality.
+          Your food will last longer which will also help you to save money.
+          <br>
+          <br>
+          Here are some solutions to start your new journey:
+          </p>
+        </div>
       </div>
 
-      <div class="scroll-b" id="scroll">
+      <div class="scroll-b" id="scroll" title="Scroll Down">
         <a onclick="scrollDown('smoothie'); return false;" title="Scroll Down" href="#" class="section-scroll">!!!!<br>!!!!<br>!!!!</a>
       </div>
 
