--- a/tips.html
+++ b/tips.html
@@ -27,7 +27,6 @@
 
     <div class="tips-container">
       <div class="tips-col">
-<<<<<<< HEAD
         <div class="tips-col-h">
           <h1>why food preservation is important</h1>
         </div>
@@ -43,41 +42,17 @@
           Here are some solutions to start your new journey:
           </p>
         </div>
-=======
-        <h1>Why is food preservation important?</h1>
-        <p>Preservation methods help inhibit bacterial growth meaning the food will be safe
-        and satisfying in the future.
-        Food preservation help minimise pathogenic bacteria and will stop its growth.
-        Bacteria only needs warmth and moisture, so knowing how to prevent the minimization of
-        bacteria will help to keep food at its best quality.
-        Your food will last longer which will also help you to save money.
-        <br>
-        <br>
-        Here are our solutions to help you start saving your food:
-        </p>
-        <a href="#">Sources</a>
->>>>>>> parent of 9e05246... Merge branch 'main' of https://github.com/Nora-bakke/FinalAssignment- into main
       </div>
 
-<<<<<<< HEAD
       <div class="scroll-b" id="scroll" title="Scroll Down">
-=======
-      <div class="scroll-b" id="scroll">
-<<<<<<< Updated upstream
-        <a onclick="scrollDown('smoothie'); return false;" href="#" class="section11">Scroll down</a>
-=======
-<<<<<<< HEAD
->>>>>>> parent of cf500a9... everything back to normal
-=======
->>>>>>> parent of cf500a9... everything back to normal
         <a onclick="scrollDown('smoothie'); return false;" title="Scroll Down" href="#" class="section-scroll">!!!!<br>!!!!<br>!!!!</a>
->>>>>>> Stashed changes
       </div>
+
+      <button onclick="backTopFunc()" id="buttonTop" title="Back to top"><i class="fa fa-angle-double-up"></i></button>
 
       <script type="text/javascript" src="scroll.js"></script>
 
     </div>
-
 
     <div class="wrapper-s" id="smoothie">
       <div class="smoothie-text">
